<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">将军令2.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_tab_login">登录</string>
    <string name="bottom_tab_dianka">点卡充值</string>
    <string name="bottom_tab_accountCenter">账号中心</string>
    <string name="bottom_tab_gameFriend">游戏助手</string>
    <string name="bottom_tab_more">更多</string>
  	<string name="loginfragment_title">网易手机将军令</string>
	<string name="loginfragment_2weima">-扫一扫-</string>
	<string name="number_1">1</string>
	<string name="number_2">2</string>
	<string name="number_3">3</string>
	<string name="number_4">4</string>
	<string name="number_5">5</string>
	<string name="number_6">6</string>
	<string name="number_7">7</string>
	<string name="number_8">8</string>
	<string name="number_9">9</string>
	<string name="dyspassword">-动态密码登录-</string>
	<string name="dianka_title">点卡充值</string>
	<string name="radiobutton1">通用点</string>
	<string name="radiobutton2">寄售点</string>
	<string name="radiobutton3">专用点</string>
	<string name="choosegame">请选择游戏</string>
	<string name="instruction">*不可消费于战网游戏</string>
	<string name="instruction_right">充值常见问题?</string>
	<string name="dianka_button">确认充值</string>
	
	
	<string name="account_title">账号中心</string>
	<string name="gamefriend_title">游戏助手</string>
	<string name="logo">梦幻西游2</string>
	<string name="zcsolf_email">1*005@qq.com</string>
	
	<string name="more_title">更多</string>
	
	<string name="scan_text">请将取景框对准二维码，手机需联网</string>
	<string name="scan_text1">手机需联网</string>
	<string name="erweima_back">返回</string>
	<string name="erweima_title">扫一扫</string>
	<string name="erweima_photo">相册</string>
</resources>